--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-perfectionist": "^2.5.0",
+    "eslint-plugin-tailwindcss": "^3.13.1",
     "postcss": "^8",
     "prettier": "^3.1.1",
     "prettier-plugin-organize-imports": "^3.2.4",
