リッチテキストエディターの導入

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@mdxeditor/editor": "^2.2.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
