--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@mantine/core": "^7.4.0",
+    "@mantine/hooks": "^7.4.0",
     "@mdxeditor/editor": "^2.2.1",
     "next": "14.0.4",
     "react": "^18",
@@ -34,7 +36,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8",
+    "postcss": "^8.4.33",
     "prettier": "^3.1.1",
     "prettier-plugin-organize-imports": "^3.2.4",
     "tailwindcss": "^3.3.0",
