--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,9 +6,7 @@
     "prettier",
     "plugin:storybook/recommended"
   ],
-  "plugins": [
-    "perfectionist"
-  ],
+  "plugins": ["perfectionist"],
   "rules": {
     "object-shorthand": "error",
     "tailwindcss/no-custom-classname": "off",
