--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,8 @@ jobs:
         run: npm list
 
       - name: Install dependencies
-        run: npm ci
+        # run: npm ci
+        run: npm install
 
       - name: Lint
         run: npm run lint
