--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,11 +32,20 @@ jobs:
         run: npm list
 
       - name: Install dependencies
-        # run: npm ci
         run: npm install
 
       - name: Lint
         run: npm run lint
+
+      - name: Cache Build
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.npm
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
 
       - name: Build
         run: npm run build
