--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Cache node modules and build
-        id: cache-all
+        id: cache-npm
         uses: actions/cache@v3
         env:
           cache-name: cache-node-modules
@@ -31,8 +31,9 @@ jobs:
         continue-on-error: true
         run: npm list
 
-      - name: Install dependencies
-        run: npm install
+      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+        name: Install dependencies
+        run: npm ci
 
       - name: Lint
         run: npm run lint
