--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,8 +31,7 @@ jobs:
         continue-on-error: true
         run: npm list
 
-      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-        name: Install dependencies
+      - name: Install dependencies
         run: npm ci
 
       - name: Lint
