--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.10",
+    "@ffmpeg/util": "^0.12.1",
     "@mantine/core": "^7.4.0",
     "@mantine/hooks": "^7.4.0",
+    "@mantine/notifications": "^7.4.1",
     "@mdxeditor/editor": "^2.2.1",
     "next": "14.0.4",
     "nextjs-toploader": "^1.6.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
+    "react-hook-form-mantine": "^3.1.3"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.7",
@@ -36,6 +41,7 @@
     "@storybook/react": "^7.6.7",
     "@storybook/test": "^7.6.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/ffmpeg": "^1.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
