--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest",
     "lint": "run-p -l -c --aggregate-output lint:*",
     "lint:eslint": "eslint .",
     "lint:prettier": "prettier --check .",
@@ -41,21 +42,27 @@
     "@storybook/react": "^7.6.7",
     "@storybook/test": "^7.6.7",
     "@types/ffmpeg": "^1.0.7",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/rewire": "^2.5.30",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-perfectionist": "^2.5.0",
     "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.1.1",
     "prettier-plugin-organize-imports": "^3.2.4",
+    "rewire": "^7.0.0",
     "storybook": "^7.6.7",
     "storybook-dark-mode": "^3.0.3",
+    "ts-jest": "^29.1.2",
     "typescript": "^5"
   },
   "lint-staged": {
