--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@storybook/nextjs": "^7.6.7",
     "@storybook/react": "^7.6.7",
     "@storybook/test": "^7.6.7",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
     "@types/ffmpeg": "^1.0.7",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
