--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@repo/app-memo": "*",
     "@repo/ui": "*",
     "next": "^14.0.4",
     "nextjs-toploader": "^1.6.6",
