--- a/apps/media-converter/package.json
+++ b/apps/media-converter/package.json
@@ -20,5 +20,10 @@
     "eslint": "^8.56.0",
     "react": "^18.2.0",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@repo/ui": "*",
+    "@ffmpeg/ffmpeg": "^0.12.10",
+    "@ffmpeg/util": "^0.12.1"
   }
 }
