--- a/web/package.json
+++ b/web/package.json
@@ -9,16 +9,16 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
-    "@repo/app-media-converter": "*",
-    "@repo/app-memo": "*",
-    "@repo/ui": "*",
-    "next": "^14.0.4",
+    "@repo/app-media-converter": "workspace:*",
+    "@repo/app-memo": "workspace:*",
+    "@repo/ui": "workspace:*",
+    "next": "^14.1.1",
     "nextjs-toploader": "^1.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^14.0.4",
+    "@next/eslint-plugin-next": "^14.1.1",
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@types/eslint": "^8.56.1",
