hotfix: next dependencies

--- a/apps/memo/package.json
+++ b/apps/memo/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@mdxeditor/editor": "^2.9.0"
+    "@mdxeditor/editor": "^2.9.0",
+    "next": "^14.1.1"
   }
 }
