--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -41,8 +41,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Test
-        run: pnpm run test
+      # - name: Test
+      # run: pnpm run test
 
       - name: Next build
         run: pnpm run build
