--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
+
       - name: Cache turbo build setup
         uses: actions/cache@v4
         with:
@@ -44,13 +44,18 @@ jobs:
         uses: pnpm/action-setup@v3
         with:
           version: 8
-      
+
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
           cache: 'pnpm'
-      
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+        with:
+          static_site_generator: next
+
       - name: Install dependencies
         run: pnpm install
 
